<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_vision</name>
  <version>0.0.0</version>
  <description>Nodos para control de robot móvil con detección de pelota y evasión de líneas</description>
  <maintainer email="centron2026@todo.todo">centron2026</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias de compilación para generar mensajes -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- Dependencias de Python -->
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- Dependencias de prueba -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Exportar el tipo de build -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
